# aabo

enclave/: .gitignore  Cargo.toml  build.rs
enclave/src/: generate.rs  lib.rs  sharding.rs
enclave/src/evm/: mod.rs  sign_eth_transaction.rs  sign_message.rs  sign_transaction.rs  tx_serde_test.rs
enclave/src/polkadot/: mod.rs
enclave/src/solana/: mod.rs  sign_message.rs  sign_transaction.rs
enclave/src/utils/: encryption.rs  generate.rs  mod.rs  sharding.rs
enclave/src/utils/encryption/: hybrid.rs  mod.rs
enclave/src/utils/encryption/kms/: ffi.rs  mod.rs
enclave/src/wallet/: mod.rs
