[package]
name = "enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
bip32 = "0.5.3"
hex = "0.4.3"
blahaj = "0.6"
solana-sdk = "2.2.2"
signal-hook-registry = "=1.4.0"
ed25519-hd-key = "0.3.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
k256 = { version = "0.13.4", features = ["ecdh"] }
aes-gcm = "0.10.3"
sha2 = "0.10.8"
base64 = "0.22.1"
mockall = "0.13.1"
alloy = { version = "0.15.6", features = ["full","signer-mnemonic-all-languages"] }
bincode = "1.3.3"

[dev-dependencies]
mockall = "0.13.1"